--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
   },
   "dependencies": {
     "@nestjs/common": "^7.0.0",
+    "@nestjs/config": "^0.6.3",
     "@nestjs/core": "^7.0.0",
     "@nestjs/graphql": "^7.9.9",
     "@nestjs/platform-express": "^7.0.0",
+    "graphbrainz": "^8.1.0",
+    "graphql-playground-middleware-express": "^1.7.22",
     "musicbrainz-api": "^0.5.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
