--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/platform-express": "^7.0.0",
     "graphbrainz": "^8.1.0",
     "graphql-playground-middleware-express": "^1.7.22",
+    "metadata-filter": "^1.3.0",
     "musicbrainz-api": "^0.5.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
