--- a/package.json
+++ b/package.json
@@ -25,15 +25,16 @@
     "@nestjs/common": "^7.0.0",
     "@nestjs/config": "^0.6.3",
     "@nestjs/core": "^7.0.0",
-    "@nestjs/graphql": "^7.9.9",
     "@nestjs/platform-express": "^7.0.0",
     "graphbrainz": "^8.1.0",
     "graphql-playground-middleware-express": "^1.7.22",
     "metadata-filter": "^1.3.0",
     "musicbrainz-api": "^0.5.2",
+    "redis": "^3.0.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.5.4"
+    "rxjs": "^6.5.4",
+    "string-similarity": "^4.0.4"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.0.0",
@@ -42,6 +43,8 @@
     "@types/express": "^4.17.3",
     "@types/jest": "25.2.3",
     "@types/node": "^13.9.1",
+    "@types/redis": "^2.8.28",
+    "@types/string-similarity": "^4.0.0",
     "@types/supertest": "^2.0.8",
     "@typescript-eslint/eslint-plugin": "3.0.2",
     "@typescript-eslint/parser": "3.0.2",
