--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/config": "^0.6.3",
     "@nestjs/core": "^7.0.0",
     "@nestjs/platform-express": "^7.0.0",
+    "change-case": "^4.1.2",
     "graphbrainz": "^8.1.0",
     "graphql-playground-middleware-express": "^1.7.22",
     "metadata-filter": "^1.3.0",
