--- a/package.json
+++ b/package.json
@@ -1,78 +1,24 @@
 {
-  "name": "patriciandb",
-  "version": "0.0.1",
-  "description": "",
-  "author": "",
-  "private": true,
-  "license": "UNLICENSED",
+  "name": "patriciandb-mesh",
+  "version": "1.0.0",
+  "description": "A GraphQL API to fetch music data from multiple public sources",
+  "main": "index.js",
   "scripts": {
-    "prebuild": "rimraf dist",
-    "build": "nest build",
-    "dev": "npm run start:dev",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
-    "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/patricianapp/PatricianDB.git"
+  },
+  "author": "Elias Jackson",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/patricianapp/PatricianDB/issues"
+  },
+  "homepage": "https://github.com/patricianapp/PatricianDB#readme",
   "dependencies": {
-    "@nestjs/common": "^7.0.0",
-    "@nestjs/config": "^0.6.3",
-    "@nestjs/core": "^7.0.0",
-    "@nestjs/platform-express": "^7.0.0",
-    "change-case": "^4.1.2",
-    "graphbrainz": "^8.1.0",
-    "graphql-playground-middleware-express": "^1.7.22",
-    "metadata-filter": "^1.3.0",
-    "musicbrainz-api": "^0.5.2",
-    "redis": "^3.0.2",
-    "reflect-metadata": "^0.1.13",
-    "rimraf": "^3.0.2",
-    "rxjs": "^6.5.4",
-    "string-similarity": "^4.0.4"
-  },
-  "devDependencies": {
-    "@nestjs/cli": "^7.0.0",
-    "@nestjs/schematics": "^7.0.0",
-    "@nestjs/testing": "^7.0.0",
-    "@types/express": "^4.17.3",
-    "@types/jest": "25.2.3",
-    "@types/node": "^13.9.1",
-    "@types/redis": "^2.8.28",
-    "@types/string-similarity": "^4.0.0",
-    "@types/supertest": "^2.0.8",
-    "@typescript-eslint/eslint-plugin": "3.0.2",
-    "@typescript-eslint/parser": "3.0.2",
-    "eslint": "7.1.0",
-    "eslint-config-prettier": "^6.10.0",
-    "eslint-plugin-import": "^2.20.1",
-    "jest": "26.0.1",
-    "prettier": "^1.19.1",
-    "supertest": "^4.0.2",
-    "ts-jest": "26.1.0",
-    "ts-loader": "^6.2.1",
-    "ts-node": "^8.6.2",
-    "tsconfig-paths": "^3.9.0",
-    "typescript": "^3.7.4"
-  },
-  "jest": {
-    "moduleFileExtensions": [
-      "js",
-      "json",
-      "ts"
-    ],
-    "rootDir": "src",
-    "testRegex": ".spec.ts$",
-    "transform": {
-      "^.+\\.(t|j)s$": "ts-jest"
-    },
-    "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
+    "@graphql-mesh/cli": "^0.88.9",
+    "@graphql-mesh/graphql": "^0.96.6",
+    "graphql": "^16.8.1"
   }
 }
